force-app/main/default/objects/cgcloud__Asset_Audit__c/cgcloud__Asset_Audit__c.object-meta.xml
<CustomObject>
    <description>This object holds the details of an asset survey.</description>
    <label>Asset Audit</label>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>Asset Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>