force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <description>Reference to the customer in which context the survey was done.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Audits</relationshipLabel>
    <relationshipName>Asset_Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>