force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Asset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the asset for which the survey is done.</description>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Asset Audit and the Asset must have the same Sales Org.</errorMessage>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>Asset.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Audits</relationshipLabel>
    <relationshipName>Asset_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>