force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Asset_Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Asset_Tag_Number__c</fullName>
    <description>Serial number of the asset.</description>
    <label>Asset Tag Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>