force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Condition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition__c</fullName>
    <description>Specifies the status of the asset in the moment of the survey execution.</description>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>