force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Distribution_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Relevant__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Specifies whether data correlated with the call needs to be distributed to mobility devices.</description>
    <label>Distribution Relevant</label>
    <type>Checkbox</type>
</CustomField>