force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Location__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>