force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Location_Rating__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Location_Rating__c</fullName>
    <description>Specifies a rating for the determined location.</description>
    <label>Location Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>