force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Method__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>D</fullName>
                <isActive>false</isActive>
                <label>D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>