force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Note__c</fullName>
    <description>Short note for the survey.</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>