force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Record_Link__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Record_Link__c</fullName>
    <description>Link to the asset audit detail page.</description>
    <formula>(HYPERLINK(&apos;/&apos;&amp;Id, $Label.cgcloud__RECORD_LINK, &apos;_top&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>