force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <label>Sales Org</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Sales_Org</valueSetName>
    </valueSet>
</CustomField>