force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Sighted__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sighted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies the presence of the asset.</description>
    <label>Sighted</label>
    <type>Checkbox</type>
</CustomField>