force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Usage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Usage__c</fullName>
    <description>Specifies if the customer uses the asset in the right way.</description>
    <inlineHelpText>Specifies if the customer uses the asset in the right way.</inlineHelpText>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RI</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>