force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__User__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the user who executed the survey.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asset_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>