force-app/main/default/objects/cgcloud__Asset_Audit__c/fields/cgcloud__Visit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the call in which the survey was done.</description>
    <label>Visit</label>
    <referenceTo>Visit</referenceTo>
    <relationshipLabel>Asset Audits</relationshipLabel>
    <relationshipName>Asset_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>