force-app/main/default/objects/cgcloud__Asset_Audit__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Creation_Date__c</columns>
    <columns>cgcloud__Account__c</columns>
    <columns>cgcloud__Asset__c</columns>
    <columns>cgcloud__Asset_Tag_Number__c</columns>
    <columns>cgcloud__User__c</columns>
    <columns>cgcloud__Sighted__c</columns>
    <columns>cgcloud__Condition__c</columns>
    <columns>cgcloud__Usage__c</columns>
    <columns>cgcloud__Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>